Make userdata a nice table instead of plain text

--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -1,1 +1,10 @@
-<div class="details">{{vars.userid}}: {{result}}</div>
+<table class="userdata">
+	<tr>
+		<td>Username</td>
+		<td>Email</td>
+	</tr>
+	<tr>
+		<td><input type="text" ng-model="result.userName"></input></td>
+		<td><input type="text" ng-model="result.email"></input></td>
+	</tr>
+</table>
