Use Font Awesome for easy icons
The current edit link is just a demonstration of how easy it
is to add icons to buttons, or anywhere else. This is probably
not the final design I'll settle on.

--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -8,3 +8,4 @@
 		<td><input type="text" ng-model="result.email"></input></td>
 	</tr>
 </table>
+<a class="btn"><i class="icon-pencil"></i>Edit</a>
