Make the model code reflect the DB's actual names
We're using username, not userName, as a column in our
database; the model should reflect that spelling.

--- a/src/partials/userlist.html
+++ b/src/partials/userlist.html
@@ -3,7 +3,7 @@
 	<table>
 		<tr ng-repeat="user in data.result.entries">
 			<td><a ng-click="vars.userid = user.id">{{user.email}}</a></td>
-			<td>{{user.userName}}</td>
+			<td>{{user.username}}</td>
 		</tr>
 	</table>
 </fieldset>
