--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="large-4 columns">
 				<label>Username</label>
-				<input type="text" placeholder="(no username)" ng-model="result.userName"/>
+				<input type="text" placeholder="(no username)" ng-model="result.username"/>
 			</div>
 			<div class="large-8 columns">
 				<label>Email</label>
