--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -4,11 +4,11 @@
 		<div class="row">
 			<div class="large-4 columns">
 				<label>Username</label>
-				<input type="text" placeholder="(no username)" ng-model="result.username"/>
+				<input type="text" placeholder="(no username)" ng-model="record.username"/>
 			</div>
 			<div class="large-8 columns">
 				<label>Email</label>
-				<input type="text" placeholder="(no email)" ng-model="result.email"/>
+				<input type="text" placeholder="(no email)" ng-model="record.email"/>
 			</div>
 		</div>
 	</fieldset>
