WIP on admin CRUD: Update is working now
This still has a bug: it will obliterate any fields not in the
PHP user model, which notably includes the password
field. Since I don't think we want to be passing password
hashes back to people's browsers, that means we need to
tweak the user model to use $set: {"fieldname": "value"}
rather than just updating the record as-is (which, in
MongoDB, will just overwrite the record and obliterate
any fields in the "old" record that weren't in the new one).
But that's an exercise for later.

--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -11,5 +11,12 @@
 				<input type="text" placeholder="(no email)" ng-model="record.email"/>
 			</div>
 		</div>
+		<ul class="button-group">
+			<li>
+				<a href="#" class="small button round" ng-click="updateUser(record)">
+					<i class="icon-pencil"></i>Save
+				</a>
+			</li>
+		</ul>
 	</fieldset>
 </form>
