Swapped order of columns in user list table
It makes more sense to present the username, rather than
the email address, as the "primary key" to be clicked on to
edit an account. ("Primary key" in quotes because it's not
the *real* key, which is the ID field that's hidden from the
end user.)


Former-commit-id: ef9f7d7cd0da49af43e4947070705f100e83c97e

--- a/src/partials/userlist.html
+++ b/src/partials/userlist.html
@@ -2,8 +2,8 @@
 	<legend>Users (total: {{data.result.entries.length}})</legend>
 	<table>
 		<tr ng-repeat="user in data.result.entries">
-			<td><a ng-click="vars.userid = user.id">{{user.email}}</a></td>
-			<td>{{user.username}}</td>
+			<td><a ng-click="vars.userid = user.id">{{user.username}}</a></td>
+			<td>{{user.email}}</td>
 		</tr>
 	</table>
 </fieldset>
