Added add and delete buttons to user list
They're not yet functional, but this gives me a sense of
where they belong in the design.

--- a/src/partials/userlist.html
+++ b/src/partials/userlist.html
@@ -6,4 +6,6 @@
 			<td>{{user.email}}</td>
 		</tr>
 	</table>
+	<div class="left"><a href="#" ng-click="addUser()" class="small button"><i class="icon-plus"></i>Add</a></div>
+	<div class="right"><a href="#" ng-click="addUser()" class="disabled small button"><i class="icon-minus"></i>Delete</a></div>
 </fieldset>
