Added nonfunctional sorting buttons to user list
Again, these are nonfunctional but give me a feel for how
the design will look.

--- a/src/partials/userlist.html
+++ b/src/partials/userlist.html
@@ -1,6 +1,10 @@
 <fieldset>
 	<legend>Users (total: {{data.result.entries.length}})</legend>
-	<table>
+	<table style="width: 100%">
+		<tr>
+			<th>Username <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
+			<th>Email<span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
+		</tr>
 		<tr ng-repeat="user in data.result.entries">
 			<td><a ng-click="vars.userid = user.id">{{user.username}}</a></td>
 			<td>{{user.email}}</td>
