--- a/src/partials/userlist.html
+++ b/src/partials/userlist.html
@@ -1,15 +1,18 @@
 <fieldset>
+	<style type="text/css">
+		tr.active {background-color: #5da423 !important;}
+	</style>
 	<legend>Users (total: {{data.result.entries.length}})</legend>
 	<table style="width: 100%">
 		<tr>
 			<th>Username <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 			<th>Email<span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 		</tr>
-		<tr ng-repeat="user in data.result.entries">
-			<td><a ng-click="vars.userid = user.id">{{user.username}}</a></td>
+		<tr ng-repeat="user in data.result.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, user)">
+			<td>{{user.username}}</td>
 			<td>{{user.email}}</td>
 		</tr>
 	</table>
 	<div class="left"><a href="#" ng-click="addUser()" class="small button"><i class="icon-plus"></i>Add</a></div>
-	<div class="right"><a href="#" ng-click="addUser()" class="disabled small button"><i class="icon-minus"></i>Delete</a></div>
+	<div class="right"><a href="#" ng-click="deleteUser(vars.user)" class="small button" ng-class="{disabled: vars.selectedIndex == -1}"><i class="icon-minus"></i>Delete</a></div>
 </fieldset>
