Refactor: Use more generic variable names
We'll eventually want to reuse this code for projects, texts,
and so on -- so we'll want generic names like "record" instead
of "user".


Former-commit-id: f3cc5cfd3247284179082da2cff7d33a49545828

--- a/src/partials/userlist.html
+++ b/src/partials/userlist.html
@@ -14,5 +14,5 @@
 		</tr>
 	</table>
 	<div class="left"><a href="#" ng-click="addUser()" class="small button"><i class="icon-plus"></i>Add</a></div>
-	<div class="right"><a href="#" ng-click="deleteUser(vars.user)" class="small button" ng-class="{disabled: vars.selectedIndex == -1}"><i class="icon-minus"></i>Delete</a></div>
+	<div class="right"><a href="#" ng-click="deleteUser(vars.record)" class="small button" ng-class="{disabled: vars.selectedIndex == -1}"><i class="icon-minus"></i>Delete</a></div>
 </fieldset>
