--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -1,4 +1,4 @@
-<form>
+<form ng-submit="updateUser(record)">
 	<fieldset>
 		<legend>User data</legend>
 		<div class="row">
@@ -19,4 +19,5 @@
 			</li>
 		</ul>
 	</fieldset>
+	<input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
 </form>
