--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -1,4 +1,4 @@
-<form ng-submit="updateUser(record)">
+<form ng-submit="updateRecord(record)">
 	<fieldset>
 		<legend>User data</legend>
 		<div class="row">
@@ -13,7 +13,7 @@
 		</div>
 		<ul class="button-group">
 			<li>
-				<a href="#" class="small button round" ng-click="updateUser(record)">
+				<a href="#" class="small button round" ng-click="updateRecord(record)">
 					<i class="icon-pencil"></i>Save
 				</a>
 			</li>
