Focus correct input box when Add or Save clicked
This will allow users entering multiple records at once to keep
typing without interruption, and the Tab and Enter keys will do
exactly what they expect.

--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="large-4 columns">
 				<label>Username</label>
-				<input type="text" placeholder="(no username)" ng-model="record.username"/>
+				<input type="text" placeholder="(no username)" ng-model="record.username" ng-focus="vars.inputfocus"/>
 			</div>
 			<div class="large-8 columns">
 				<label>Email</label>
