Improve UI experience of user CRUD form
Now the edit button changes its name in a context-dependant
way, and the whole form appears when it's needed and disappears
when it isn't. This ensures that the user always knows where to
type next.

--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -1,4 +1,4 @@
-<form ng-submit="updateRecord(record)">
+<form ng-submit="updateRecord(record)" ng-hide="(vars.editButtonName=='')">
 	<fieldset>
 		<legend>User data</legend>
 		<div class="row">
@@ -14,7 +14,7 @@
 		<ul class="button-group">
 			<li>
 				<a href="#" class="small button round" ng-click="updateRecord(record)">
-					<i class="icon-pencil"></i>Save
+					<i class="icon-{{vars.editButtonIcon}}"></i> {{vars.editButtonName}}
 				</a>
 			</li>
 		</ul>
