fixed frontpage slide pagination CSS (because of conflict with foundation)
Former-commit-id: c75e5a4011c4bb19cb74ff741587b55b09d173ca

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -18,7 +18,7 @@ body {
 	line-height: 1;  
 	font-size: 87.5%;
 	font-family: "Open Sans", Arial, Helvetica, Verdana, sans-serif;
-	color: #404040;
+	color: #404040 !important;
 }  
   
 h1, h2, h3, h4, h5, h6 {  
