Make user app form vertical instead of horizontal
This should allow even really LONG email addresses to fit nicely in the user list view.

--- a/src/partials/userdata.html
+++ b/src/partials/userdata.html
@@ -2,11 +2,11 @@
 	<fieldset>
 		<legend>User data</legend>
 		<div class="row">
-			<div class="large-4 columns">
+			<div class="large-12">
 				<label>Username</label>
 				<input type="text" placeholder="(no username)" ng-model="record.username" ng-focus="vars.inputfocus"/>
 			</div>
-			<div class="large-8 columns">
+			<div class="large-12">
 				<label>Email</label>
 				<input type="text" placeholder="(no email)" ng-model="record.email"/>
 			</div>
