--- a/src/angular-app/admin/partials/userdata.html
+++ b/src/angular-app/admin/partials/userdata.html
@@ -3,8 +3,8 @@
 		<legend>User data</legend>
 		<div class="row">
 			<div class="large-12">
-				<label>Username</label>
-				<input type="text" placeholder="(no username)" ng-model="record.username" ng-focus="vars.inputfocus"/>
+				<label>Name</label>
+				<input type="text" placeholder="(your name here)" ng-model="record.name" ng-focus="vars.inputfocus"/>
 			</div>
 			<div class="large-12">
 				<label>Email</label>
