--- a/src/angular-app/admin/partials/userlist.html
+++ b/src/angular-app/admin/partials/userlist.html
@@ -5,11 +5,11 @@
 	<legend>Users (total: {{data.result.entries.length}})</legend>
 	<table style="width: 100%">
 		<tr>
-			<th>Username <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
+			<th>Name <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 			<th>Email<span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 		</tr>
 		<tr ng-repeat="user in data.result.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, user)">
-			<td>{{user.username}}</td>
+			<td>{{user.name}}</td>
 			<td>{{user.email}}</td>
 		</tr>
 	</table>
