--- a/src/angular-app/sfadmin/partials/userlist.html
+++ b/src/angular-app/sfadmin/partials/userlist.html
@@ -5,12 +5,12 @@
 	<legend>Users (total: {{data.result.entries.length}})</legend>
 	<table style="width: 100%">
 		<tr>
-			<th>Name <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
-			<th>Email<span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
+			<th>User Name <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
+			<th>Full Name <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 		</tr>
 		<tr ng-repeat="user in data.result.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, user)">
+			<td>{{user.username}}</td>
 			<td>{{user.name}}</td>
-			<td>{{user.email}}</td>
 		</tr>
 	</table>
 	<div class="left"><a href="#" ng-click="addRecord()" class="small button"><i class="icon-plus"></i></a></div>
