Fix consequential damage from jsonrpc change.
Former-commit-id: 2a6756050dc96a5c1aa0cb1cb1338b6a25e17bc2

--- a/src/angular-app/sfadmin/partials/userlist.html
+++ b/src/angular-app/sfadmin/partials/userlist.html
@@ -2,13 +2,13 @@
 	<style type="text/css">
 		tr.active {background-color: #5da423 !important;}
 	</style>
-	<legend>Users (total: {{data.result.entries.length}})</legend>
+	<legend>Users (total: {{data.entries.length}})</legend>
 	<table style="width: 100%">
 		<tr>
 			<th>Username <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 			<th>Full Name <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 		</tr>
-		<tr ng-repeat="user in data.result.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, user)">
+		<tr ng-repeat="user in data.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, user)">
 			<td class="useractive-{{user.active}}">{{user.username}}</td>
 			<td class="useractive-{{user.active}}">{{user.name}}</td>
 		</tr>
