--- a/src/angular-app/sfadmin/partials/projectlist.html
+++ b/src/angular-app/sfadmin/partials/projectlist.html
@@ -2,14 +2,14 @@
 	<style type="text/css">
 		tr.active {background-color: #5da423 !important;}
 	</style>
-	<legend>Projects (total: {{data.result.entries.length}})</legend>
+	<legend>Projects (total: {{data.entries.length}})</legend>
 	<table style="width: 100%">
 		<tr>
 			<th>Project <span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 			<th>Language<span class="right"><i class="icon-sort-by-alphabet"></i>&nbsp;<i class="icon-sort-by-alphabet-alt"></i></span></th>
 			<th>Options</th>
 		</tr>
-		<tr ng-repeat="project in data.result.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, project)">
+		<tr ng-repeat="project in data.entries" ng-class="{active: $index==vars.selectedIndex}" ng-click="selectRow($index, project)">
 			<td>{{project.projectname}}</td>
 			<td>{{project.language}}</td>
 			<td><a href="/app/projectadmin/{{project.id}}">Manage</a></td>
