--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -1,5 +1,13 @@
 
 /* Typeahead */
+div.typeahead {
+	z-index: 1051;
+	margin-top: 0px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
 div.typeahead > div {
 	z-index: 10;
 	background-color: #fff;
@@ -38,6 +46,10 @@ li.typeahead-item p.email {
 }
 
 /* listview */
+div.listview {
+	margin-top: 8px;
+}
+
 div.listview tr.active {
 	background-color: #ffc;
 }
