project admin styling
Former-commit-id: 604f2333b5dc81a023352504d066304bf96f1e73

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -596,3 +596,12 @@ p.applicationContent {
 .banner {
 	padding: 30px 0 30px 0;
 }
+
+/* icons */
+button i {
+	margin-right: 8px;
+}
+
+i.icon-remove {
+	color: #f66
+}
