--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -11,6 +11,10 @@ div.typeahead {
 div.typeahead > div {
 	z-index: 10;
 	background-color: #fff;
+	border: 1px solid #ccc;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 
 div.typeahead ul {
