--- a/src/angular-app/sfadmin/partials/userdata.html
+++ b/src/angular-app/sfadmin/partials/userdata.html
@@ -4,23 +4,25 @@
 		<div class="row">
 			<div class="large-12">
 				<label>User Name</label>
-				<input type="text" placeholder="(username)" ng-model="record.username" ng-focus="vars.inputfocus"/>
+				<input type="text" placeholder="(username)" ng-model="record.username"/>
 			</div>
 			<div class="large-12">
 				<label>Name</label>
-				<input type="text" placeholder="(your name here)" ng-model="record.name" ng-focus="vars.inputfocus"/>
+				<input type="text" placeholder="(your name here)" ng-model="record.name"/>
 			</div>
 			<div class="large-12">
 				<label>Email</label>
 				<input type="text" placeholder="(no email)" ng-model="record.email"/>
 			</div>
-			<div class="large-12">
+			<a href="" ng-click="togglePasswordForm(); vars.inputfocus = false">Click to change password</a>
+			<div class="large-12" ng-show="vars.showPasswordForm">
 				<label>Password</label>
-				<input type="text" placeholder="(enter new password)" ng-model="record.password"/>
+				<input type="password" ng-model="record.password" ng-focus="vars.inputfocus" name="password"/>
 			</div>
-			<div class="large-12">
-				<label>Confirm Password</label>
-				<input type="text" placeholder="(confirm password)" ng-model="record.password_confirm"/>
+			<div class="large-12" ng-show="vars.showPasswordForm">
+				<label>Confirm password</label>
+				<input type="password" ng-model="record.confirm_password" require-equal="record.password" name="confirmPassword"/>
+				<label ng-show="passwordForm.confirmPassword.$error.match">Passwords do not match</label>
 			</div>
 			<div class="large-12">
 				<label><input type="checkbox" ng-model="record.active"/> Is Active</label>
@@ -32,11 +34,11 @@
 		</div>
 		<ul style="margin-top:20px" class="button-group">
 			<li>
-				<a href="#" class="small button round" ng-click="updateRecord(record)">
+				<a href="#" class="small button round" ng-click="updateRecord(record)" ng-disabled="(passwordForm.password.$pristine != passwordForm.confirmPassword.$pristine) || passwordForm.$invalid">
 					<i class="icon-{{vars.editButtonIcon}}"></i> {{vars.editButtonName}}
 				</a>
 			</li>
 		</ul>
 	</fieldset>
-	<input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
+	<input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;" ng-disabled="(passwordForm.password.$pristine != passwordForm.confirmPassword.$pristine) || passwordForm.$invalid"/>
 </form>
