Change sfadmin active color to #ffc

--- a/src/angular-app/sfadmin/partials/userlist.html
+++ b/src/angular-app/sfadmin/partials/userlist.html
@@ -1,6 +1,6 @@
 <fieldset>
 	<style type="text/css">
-		tr.active {background-color: #5da423 !important;}
+		tr.active {background-color: #ffc;}
 	</style>
 	<legend>Users (total: {{data.entries.length}})</legend>
 	<table style="width: 100%">
