--- a/src/angular-app/sfadmin/partials/projectlist.html
+++ b/src/angular-app/sfadmin/partials/projectlist.html
@@ -1,6 +1,6 @@
 <fieldset>
 	<style type="text/css">
-		tr.active {background-color: #5da423 !important;}
+		tr.active {background-color: #ffc;}
 	</style>
 	<legend>Projects (total: {{data.entries.length}})</legend>
 	<table style="width: 100%">
