--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -1,5 +1,4 @@
-<legend>Project</legend>
-<legend>Texts</legend>
+<legend>Texts to Check</legend>
 <div listview search="queryProjectTexts()" select="">
 <table class="table" style="width: 100%">
 	<thead>
