--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -1,4 +1,4 @@
-<legend>Projects</legend>
+<legend>My Projects</legend>
 <div listview search="queryUserProjects()" select="">
 <table class="table" style="width: 100%">
 	<thead>
