--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -605,3 +605,35 @@ button i {
 i.icon-remove {
 	color: #f66
 }
+
+div.hdrnav ul {
+}
+
+div.hdrnav li {
+	background: #777777;
+	display: block;
+	float: left;
+	margin-top: 16px;	
+	margin-right: 7px;
+}
+
+div.hdrnav li:hover, div.hdrnav li.here {
+	background: #0088cc;
+}
+
+div.hdrnav img {
+	margin-right: 12px;
+}
+
+div.hdrnav a {
+	color: #fff;
+	display: block;
+	padding: 6px 12px 6px 12px;
+	text-decoration: none;
+}
+
+div#logo-small {
+	width: 27px;
+	height: 36px;
+	background: url(../images/sf_logo_small.png) no-repeat;
+}
