--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -1,5 +1,17 @@
 <legend>My Projects</legend>
-<div listview search="queryUserProjects()" select="">
+<p>
+<a ng-click="newProjectCollapsed = !newProjectCollapsed">Create New Project</a>
+</p>
+<div collapse="!newProjectCollapsed">
+	<form class="well form-inline">
+	<input type="text" ng-model="projectName" placeholder="Project Name"/>
+	<button type="submit" class="btn" ng-click="addProject()"><i class="icon-plus"></i>Add Project</button>
+	</form>
+</div>
+<form class="control-bar form-inline">
+<button class="btn" ng-click="removeProject()"><i class="icon-remove"></i>Remove Projects</button>
+</form>
+<div listview search="queryProjectsForUser()" select="">
 <table class="table" style="width: 100%">
 	<thead>
 	<tr>
