wip #27: questions view + admin

--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -10,7 +10,7 @@
 	<label>Text</label>
 	<textarea ng-model="content" class="span4" rows="4"></textarea>
 	<label></label>
-	<button type="submit" ng-model="addMode" class="btn" ng-click="addText()"><i class="icon-plus"></i>Add Text to Check</button>
+	<button type="submit" class="btn" ng-click="addText()"><i class="icon-plus"></i>Add Text to Check</button>
 	</fieldset>
 	</form>
 </div>
