--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -15,7 +15,7 @@
 <table class="table" style="width: 100%">
 	<thead>
 	<tr>
-		<th></th>
+		<th width="16px"></th>
 		<th>Project</th>
 	</tr>
 	</thead>
