--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -26,7 +26,7 @@
 	<tbody>
 	<tr ng-repeat="question in questions" ng-class="{active: isSelected(question)}" >
 		<td width="16px" align="center"><input type="checkbox" ng-checked="isSelected(question)" ng-click="updateSelection($event, question)" /></td>
-		<td><a href="#/project/{{projectId}}/{{textId}}/{{question.id}}">{{question.comment}}</a></td>
+		<td><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.comment|urlencode}}/{{question.id}}">{{question.comment}}</a></td>
 	</tr>
 	</tbody>
 </table>		
