Align items-per-page control with paging controls
Minor CSS tweaks here, no functionality change.


Former-commit-id: 8889108d5f77ae4cd4becc6b5f16429e0fd18bc7

--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -55,6 +55,10 @@ div.listview {
 	margin-top: 8px;
 }
 
+div.listview div.paginationblock div {
+	display: inline-block;
+}
+
 div.listview tr.active {
 	background-color: #ffc;
 }
