breadcrumbs now working in sfchecks #30
Former-commit-id: ca077170093f4f544e7831941f70592d2137d520

--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -1,4 +1,4 @@
-<legend>Questions</legend>
+<h2 style="font-weight:normal">Questions for {{textName}}</h2>
 <p>
 <a ng-click="newQuestionCollapsed = !newQuestionCollapsed">Add a New Question</a>
 </p>
