--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -1,4 +1,4 @@
-<legend>Texts to Check</legend>
+<h2 style="font-weight:normal">Texts for {{projectName}}</h2>
 <p>
 <a ng-click="newTextCollapsed = !newTextCollapsed">Add New Text</a>
 </p>
