--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -1,4 +1,4 @@
-<legend>My Projects</legend>
+<h2 style="font-weight:normal">My Projects</h2>
 <p>
 <a ng-click="newProjectCollapsed = !newProjectCollapsed">Create New Project</a>
 </p>
