wip #28: Add rough cut for question.html with sample data.
Former-commit-id: 80b48ca26094f0675b95e0177bcdcaa881c10e11

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -637,3 +637,21 @@ div#logo-small {
 	height: 36px;
 	background: url(../images/sf_logo_small.png) no-repeat;
 }
+
+/* Question Page */
+div#text {
+	overflow: auto;
+	min-height: 400px;
+	max-height: 600px;
+	border: 1px solid red;
+}
+
+div#comments {
+	width: 512px;
+	min-height: 400px;
+	border: 1px solid blue;
+}
+
+div.vote a {
+	display: block;
+}
