integrated jquery-te into question.html

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -25,6 +25,6 @@ To Sherlock Holmes she is always the woman. I have seldom heard him mention her 
 		This is the comment: {{comment.content}}
 		</div>
 	</div>
-	<div>Add your answer</div>
-	<button>Post</button>
+	<div id="commentInput" class="jqte"></div>
+	<button>Reply</button>
 </div>
