--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -468,11 +468,11 @@ table th, table tr th {
 	color: #f4f4f6;
 	font-size: 0.9em;
 }
-
+/*
 table td {
 	font-size: 0.85em;
 }
-
+*/
 table tbody tr.altrow {
 	background-color: #f9f9fa;
 }
@@ -643,15 +643,66 @@ div#text {
 	overflow: auto;
 	min-height: 400px;
 	max-height: 600px;
-	border: 1px solid red;
 }
 
 div#comments {
 	width: 512px;
 	min-height: 400px;
-	border: 1px solid blue;
+}
+
+div#comments table td {
+	border: 0;
+}
+
+div#comments td {
+	vertical-align: top;
+}
+
+div.vote {
+	text-align: center;
+	line-height: 1.0em;
 }
 
 div.vote a {
 	display: block;
+	font-size: 42px;
+	color: #999;
+}
+
+div.vote span {
+	font-size: 24px;
+	font-weight: bold;
+	color: #999;
+}
+/*
+div.answer {
+	vertical-align: top;
+	margin: 12px 0 0 18px;
+}
+*/
+div.answer div.by {
+	background: #eee;
+	margin: 8px 0 0 0;
+	vertical-align: top;
+	width: 260px;
+}
+
+div.answer div.by img {
+	xdisplay: inline-block;
+	border: 2px solid white;
+	margin: 4px;
+	vertical-align: top;
+}
+
+div.answer div.by div {
+	display: inline-block;
+	margin: 6px 0 4px 4px;
+	vertical-align: middle;
+	line-height: 1.2em;
+	color: #666;
+}
+
+div#comments table.comments td {
+	border-top: 1px solid #eee;
+	border-bottom: 1px solid #eee;
 }
