fixed breadcrumbs (some stuff got clobbered by a previous merge)
Former-commit-id: 6b4f0629e57f655afb66b56d020049b7304a9f2c

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -658,6 +658,10 @@ div.sf-breadcrumbs a:hover {
 	text-decoration: underline;
 }
 
+div.sf-breadcrumbs .here {
+	color: #202020;
+}
+
 /* Question Page */
 div#text {
 	overflow: auto;
