--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -11,7 +11,7 @@
 <form class="control-bar form-inline">
 <button class="btn" ng-click="removeProject()"><i class="icon-remove"></i>Remove Projects</button>
 </form>
-<div listview search="queryProjectsForUser()" select="">
+<div listview search="queryProjectsForUser()" items="projects" visible-items="visibleProjects" select="">
 <table class="table" style="width: 100%">
 	<thead>
 	<tr>
@@ -20,7 +20,7 @@
 	</tr>
 	</thead>
 	<tbody>
-	<tr ng-repeat="project in projects" ng-class="{active: isSelected(project)}" >
+	<tr ng-repeat="project in visibleProjects" ng-class="{active: isSelected(project)}" >
 		<td width="16px" align="center"><input type="checkbox" ng-checked="isSelected(project)" ng-click="updateSelection($event, project)" /></td>
 		<td><a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">{{project.projectname}}</a></td>
 	</tr>
