--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -15,7 +15,7 @@
 <form class="control-bar form-inline">
 <button class="btn" ng-click="removeQuestions()"><i class="icon-remove"></i>Remove Questions</button>
 </form>
-<div listview search="queryQuestions()" select="">
+<div listview search="queryQuestions()" items="questions" visible-items="visibleQuestions" select="">
 <table class="table" style="width: 100%">
 	<thead>
 	<tr>
@@ -24,7 +24,7 @@
 	</tr>
 	</thead>
 	<tbody>
-	<tr ng-repeat="question in questions" ng-class="{active: isSelected(question)}" >
+	<tr ng-repeat="question in visibleQuestions" ng-class="{active: isSelected(question)}" >
 		<td width="16px" align="center"><input type="checkbox" ng-checked="isSelected(question)" ng-click="updateSelection($event, question)" /></td>
 		<td><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.comment|urlencode}}/{{question.id}}">{{question.comment}}</a></td>
 	</tr>
