Improve look of listviews for projects, texts, Q's
Instead of presenting projects, texts and questions as a table view
suitable for editing, we should present them in a view more like the
design of the spec.

There's quite a bit of fake data being presented here, like the number
of questions per text, unread answers, unread comments, and so on.
Eventually this will be turned into real API calls, but for now this
gives us a page to look at that closely resembles the real thing.


Former-commit-id: 9c6d2b34e08cbec6063d756be1fb9302dca58d70

--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -12,22 +12,26 @@
 	</fieldset>
 	</form>
 </div>
-<form class="control-bar form-inline">
-<button class="btn" ng-click="removeQuestions()"><i class="icon-remove"></i>Remove Questions</button>
-</form>
 <div listview search="queryQuestions()" items="questions" visible-items="visibleQuestions" select="">
-<table class="table" style="width: 100%">
-	<thead>
-	<tr>
-		<th width="16px"></th>
-		<th>Questions</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr ng-repeat="question in visibleQuestions" ng-class="{active: isSelected(question)}" >
-		<td width="16px" align="center"><input type="checkbox" ng-checked="isSelected(question)" ng-click="updateSelection($event, question)" /></td>
-		<td><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.comment|urlencode}}/{{question.id}}">{{question.comment}}</a></td>
-	</tr>
-	</tbody>
-</table>		
+<hr />
+<div ng-repeat="question in visibleQuestions" class="details-row">
+	<ul class="inline">
+		<li><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.comment|urlencode}}/{{question.id}}">
+			<div class="attention-block">
+				<span class="count">{{getAnswerCount(question)}}</span><br />
+				<span class="subtitle">answers</span>
+			</div>
+		</a></li>
+		<li><div class="name-with-viewcount">
+			<a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.comment|urlencode}}/{{question.id}}">
+				<span class="name">{{question.comment}}</span>
+			</a>
+			<br />
+			<span class="viewcount">{{getViewsCount(question)}} views</span>
+		</div></li>
+		<li><a href="#">{{getUnreadAnswers(question)}} unread answers</a></li>
+		<li><a href="#">{{getUnreadComments(question)}} unread comments</a></li>
+	</ul>
+	<hr />
+</div>
 </div>
