--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -59,7 +59,7 @@ div.listview div.paginationblock div {
 	display: inline-block;
 }
 
-div.listview tr.active {
+div.listview .active {
 	background-color: #ffc;
 }
 
