Restore remove button back in projects, texts, Q's
Eventually the button (and the checkboxes that go with it) should be
made visible and available, or hidden and unavailable, depending on
whether the logged-in user has appropriate admin rights. For now,
they will just be visible to all users.

--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -14,10 +14,14 @@
 	</fieldset>
 	</form>
 </div>
+<form class="control-bar form-inline">
+<button class="btn" ng-click="removeTexts()"><i class="icon-remove"></i>Remove Texts</button>
+</form>
 <div listview search="queryTexts()" items="texts" visible-items="visibleTexts" select="">
 <hr />
 <div ng-repeat="text in visibleTexts" class="details-row">
-	<ul class="inline">
+	<ul class="inline" ng-class="{active: isSelected(text)}">
+		<li><input type="checkbox" ng-checked="isSelected(text)" ng-click="updateSelection($event, text)" /></li>
 		<li><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{text.title|urlencode}}/{{text.id}}">
 			<div class="attention-block">
 				<span class="count">{{getQuestionCount(text)}}</span><br />
