--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -8,10 +8,14 @@
 	<button type="submit" class="btn" ng-click="addProject()"><i class="icon-plus"></i>Add Project</button>
 	</form>
 </div>
+<form class="control-bar form-inline">
+<button class="btn" ng-click="removeProject()"><i class="icon-remove"></i>Remove Projects</button>
+</form>
 <div listview search="queryProjectsForUser()" items="projects" visible-items="visibleProjects" select="">
 <hr />
 <div ng-repeat="project in visibleProjects" class="details-row">
-	<ul class="inline">
+	<ul class="inline" ng-class="{active: isSelected(project)}">
+		<li><input type="checkbox" ng-checked="isSelected(project)" ng-click="updateSelection($event, project)" /></li>
 		<li><a href="#/project/{{project.projectname|urlencode}}/{{project.id}}">
 			<div class="attention-block">
 				<span style="font-size: 24px">{{getTextsCount(project)}}</span><br />
