--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -12,10 +12,14 @@
 	</fieldset>
 	</form>
 </div>
+<form class="control-bar form-inline">
+<button class="btn" ng-click="removeQuestions()"><i class="icon-remove"></i>Remove Questions</button>
+</form>
 <div listview search="queryQuestions()" items="questions" visible-items="visibleQuestions" select="">
 <hr />
 <div ng-repeat="question in visibleQuestions" class="details-row">
-	<ul class="inline">
+	<ul class="inline" ng-class="{active: isSelected(question)}">
+		<li><input type="checkbox" ng-checked="isSelected(question)" ng-click="updateSelection($event, question)" /></li>
 		<li><a href="#/project/{{projectName|urlencode}}/{{projectId}}/{{textName|urlencode}}/{{textId}}/{{question.comment|urlencode}}/{{question.id}}">
 			<div class="attention-block">
 				<span class="count">{{getAnswerCount(question)}}</span><br />
